samples/_failures_safe/1761074292_f513df_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_55e8c2c8.c: In function ‘main’:
./samples/SAFE/__tmp_55e8c2c8.c:147:9: error: expected expression at end of input
  147 |         } else if (strncmp(input, "addedge ", 8) == 0)
      |         ^
./samples/SAFE/__tmp_55e8c2c8.c:147:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_55e8c2c8.c:147:9: error: expected declaration or statement at end of input
